--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "reactghpages",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tonysoman0203.github.io/react-gh-pages",
+  "homepage": "https://tonysoman0203.github.io/me",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "emotion-theming": "^10.0.27",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
